# token-bowl-chat-agent

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_agent.py
src/token_bowl_chat_agent/: __init__.py  agent.py  cli.py
tests/: __init__.py  test_agent.py  test_cli.py
