[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-bowl-chat-agent"
version = "1.0.0"
description = "LangChain-powered intelligent agent for Token Bowl Chat servers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rob Spectre", email = "rob@haihai.ai"}
]
keywords = ["chat", "agent", "langchain", "websocket", "token-bowl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "token-bowl-chat>=3.0.0",
    "langchain>=0.3.0,<1.0",
    "langchain-openai>=0.2.0,<1.0",
    "langchain-community>=0.3.0,<1.0",
    "langchain-core>=0.3.0,<1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
mcp = [
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0"
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0"
]

[project.urls]
Homepage = "https://github.com/RobSpectre/token-bowl-chat-agent"
Issues = "https://github.com/RobSpectre/token-bowl-chat-agent/issues"
Source = "https://github.com/RobSpectre/token-bowl-chat-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/token_bowl_chat_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "RUF",  # Ruff-specific rules
]
ignore = [
    "S101",  # Use of assert in tests is fine
    "S603",  # Subprocess without shell=True is fine
    "S607"   # Partial path for subprocess is fine
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true